Enhancement of the view of an issue. Add link previous and after to quickly jump to another issue. Those links are pointing to issue with the same status (open/closed).
With little trick on url we can do the same thing for browse "my issue" and "my watchlist".

--- a/www/media/idf/css/style.css
+++ b/www/media/idf/css/style.css
@@ -225,6 +225,7 @@ div.issue-comment {
 
 div.issue-comment-first {
   border-top: 1px solid #d3d7cf;
+  clear: both;
 }
 
 div.issue-comment-signin {
